# server-gateway

./: .gitignore  AGENTS.md  README.md  pyproject.toml
config/: Caddyfile.example  server-gateway.env.example  server-gateway.service
docs/superpowers/plans/: 2026-07-19-server-gateway.md
docs/superpowers/specs/: 2026-07-19-server-gateway-design.md
examples/: send_byn_rub_request.py
scripts/: install_local.sh
src/server_gateway/: __init__.py  auth.py  config.py  converter.py  crypto.py  main.py  state.py
tests/: test_api.py  test_install_local.py
