[project]
name = "server-gateway"
version = "0.1.0"
description = "Minimal secure automation gateway server."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=43,<46",
    "fastapi>=0.115,<1.0",
    "httpx>=0.27,<1.0",
    "pydantic>=2.7,<3.0",
    "uvicorn>=0.30,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/server_gateway"]
